<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActividadNuevoMensaje"
    android:orientation="vertical"
    android:background="#d8f8e1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3">
        <TextView
            android:id="@+id/tituloNuevoMensaje"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tituloNuevoMensaje"
            android:gravity="center"
            android:textSize="30dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical">
        <EditText
            android:id="@+id/usuarioMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/pistaUsuarioMensaje">
        </EditText>
        <EditText
            android:id="@+id/tituloMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/pistaTituloMensaje">
        </EditText>
        <EditText
            android:id="@+id/AsuntoMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/pistaAsuntoMensaje">
        </EditText>
        <EditText
            android:id="@+id/ContenidoMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/pistaContenidoMensaje">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3">
        <Button
            android:id="@+id/enviar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#b8e4ff"
            android:text="@string/enviarMensaje"
            android:textColor="@color/black"
            >

        </Button>
    </LinearLayout>

</LinearLayout>