<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActividadNuevoInforme"
    android:orientation="vertical"
    android:background="#793FDF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3.5"
        android:background="#D2DE32">
        <TextView
            android:id="@+id/tituloNuevoInforme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tituloCrearInforme"
            android:gravity="center"
            android:textSize="30dp"
            android:textColor="@color/cardview_dark_background">

        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:background="@color/white"
        >
        <EditText
            android:id="@+id/textoTituloInforme"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:hint="@string/pistaTituloInforme">
        </EditText>

        <EditText
            android:id="@+id/textoContenidoInforme"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:hint="@string/pistaContenidoInforme">
        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:layout_gravity="center">

        <Button
            android:id="@+id/botonVolverPantallaCrearInforme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="50dp"
            android:backgroundTint="#016A70"
            android:text="@string/textoVolver">
        </Button>
        <Button
            android:id="@+id/botonConfirmarInforme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:backgroundTint="#016A70"
            android:text="@string/confirmarInforme">
        </Button>
    </LinearLayout>

</LinearLayout>