<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActividadCrearPermisos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff7c70">
            <TextView
                android:id="@+id/tituloCrearPermiso"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tituloCrearPermisos"
                android:textSize="30dp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <EditText
                android:id="@+id/textoAsunto"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:hint="@string/motivoPermiso">
            </EditText>
            <EditText
                android:id="@+id/textoDetalles"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:hint="@string/detalles">
            </EditText>
            <CalendarView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </CalendarView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff7c70"
            android:layout_gravity="center">
            <Button
                android:id="@+id/botonVolverPermisos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#a62520"
                android:text="@string/textoVolver">
            </Button>
            <Button
                android:id="@+id/botonSolicitarPermiso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#a62520"
                android:text="@string/textoSolicitar">
            </Button>
        </LinearLayout>
    </LinearLayout>
</ScrollView>