<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".ActividadPaginaRegistro" android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="#2196F3">
        <TextView
            android:id="@+id/tituloReuniones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tituloReuniones"
            android:gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:textSize="35sp"
            android:background="#96B6C5"
            android:textColor="#E0E0E0"
            android:textStyle="bold"
            android:padding="16dp"
            android:shadowColor="#8eb6ed"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="10">
        </TextView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="vertical">
            <TextView
                android:id="@+id/ejemploReuniones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="60dp"
                android:backgroundTint="#8eb6ed"
                android:text="@string/ejemploReuniones"
                android:textStyle="bold"
                >
            </TextView>

        <Button
            android:id="@+id/botonReunion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="60dp"
            android:backgroundTint="#8eb6ed"
            android:text="@string/reunion">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/botonCrearReunion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#8eb6ed"
            android:text="@string/crearReunion">
        </Button>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="#96B6C5"
        android:gravity="center">

        <Button
            android:id="@+id/botonVolverPantallaReuniones"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF8080"
            android:text="@string/textoVolver"
            >
        </Button>

    </LinearLayout>
</LinearLayout>