<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActividadPrincipal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="#239DD5"
        android:gravity="center|center_horizontal">
        <ImageButton
            android:id="@+id/imagenLogo"
            android:layout_width="286dp"
            android:layout_height="92dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/imagenlogo">
        </ImageButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">
            <TextView
                android:id="@+id/textoBienvenida"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textoBienvenida"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="#2196F3"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:background="#E3F2FD"
                android:padding="16dp"
                android:shadowColor="#000000"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="3"> </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#2196F3"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/botonPaginaRegistro"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/textobotonRegistro"
                android:backgroundTint="#8eb6ed"/>
            <Button
                android:id="@+id/botonPaginaInicioSesion"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/textobotonInicioSesion"
                android:backgroundTint="#8eb6ed"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>