<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ActividadMenuUsuario">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4.5"
                android:background="#2196F3"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/imagenLogo"
                    android:layout_width="286dp"
                    android:layout_height="92dp"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@drawable/imagenlogo">
                </ImageButton>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/saludoMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:padding="16dp"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="3"
                    android:text="@string/saludoMenu"
                    android:textColor="#2196F3"
                    android:textSize="24sp"
                    android:textStyle="bold">
                </TextView>

                <TextView
                    android:id="@+id/nombreSaludo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:padding="16dp"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="3"
                    android:textColor="#2196F3"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="left|start">
                </TextView>

                <ImageButton
                    android:id="@+id/botonPerfil"
                    android:layout_width="63dp"
                    android:layout_height="68dp"
                    android:scaleType="fitCenter"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/imagenperfil">
                </ImageButton>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <Button
                    android:id="@+id/botonActividadHorario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="60dp"
                    android:backgroundTint="#8eb6ed"
                    android:text="HORARIO">
                </Button>

                <Button
                    android:id="@+id/botonActividadReuniones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="60dp"
                    android:backgroundTint="#8eb6ed"
                    android:text="REUNIONES"></Button>

                <Button
                    android:id="@+id/botonActividadAusencias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="60dp"
                    android:backgroundTint="#8eb6ed"
                    android:text="@string/textoBotonAusencias"></Button>

                <Button
                    android:id="@+id/botonActividadTareas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="60dp"
                    android:backgroundTint="#8eb6ed"
                    android:text="@string/textoBotonTareas"></Button>

                <Button
                    android:id="@+id/botonActividadPermisos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="60dp"
                    android:backgroundTint="#8eb6ed"
                    android:text="@string/textoBotonPermisos"></Button>

                <Button
                    android:id="@+id/botonActividadMensajes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="60dp"
                    android:backgroundTint="#8eb6ed"
                    android:text="@string/textoBotonMensajes"></Button>


            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>
</ScrollView>